# mcp_doku_tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
code/: __init__.py  config.py  main.py  server.py
code/tools/: __init__.py  reader.py  tracker.py  writer.py
config/: config.example.yaml
templates/: module.md
tests/: __init__.py  conftest.py  test_config.py  test_reader.py  test_tracker.py  test_writer.py
